# calculator

./: CMakeLists.txt  README.md
src/: calculator.cpp  calculator.hpp  main.cpp  test.cpp
test/: test_calc.cpp
